new feature user view for role admin
- craeted controller route and app  enable with cors
- created swagger users-view
